<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.character.CharacterFilterDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/location_filter_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:hint="@string/location_filter_hint_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/location_filter_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:hint="@string/location_filter_hint_type"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/location_filter_dimension"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:hint="@string/location_filter_hint_dimension"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>